--- a/content/20161212.md
+++ b/content/20161212.md
@@ -4,8 +4,8 @@ Category: Misc
 Tags: 使用導引
 Author:40523217
 
-                <p>以下為第十四週開始的城市練習,要利用 <a href="http://mde.tw/2016fallcp/course/Python3Programs.txt">http://mde.tw/2016fallcp/course/Python3Programs.txt</a> 要整理Brython 的用法.
-</p>
+                以下為第十四週開始的城市練習,要利用 <a href="http://mde.tw/2016fallcp/course/Python3Programs.txt">http://mde.tw/2016fallcp/course/Python3Programs.txt</a> 要整理Brython 的用法.
+
 <!-- 導入 Brython 標準程式庫 -->
 
 <script type="text/javascript" 
